<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_name_demo"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/contact_name_size" />

    <LinearLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_top"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/contact_list_item_text_size" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/first_name_padding"
            android:text="@string/first_name_demo"
            android:textSize="@dimen/contact_list_item_text_size" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lastNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/contact_list_item_text_size" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/last_name_padding"
            android:text="@string/last_name_demo"
            android:textSize="@dimen/contact_list_item_text_size" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/contact_list_item_text_size" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/phone_padding"
            android:text="@string/phone_demo"
            android:textSize="@dimen/contact_list_item_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/contact_list_item_text_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/contact_list_item_text_size" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/email_padding"
            android:text="@string/email_demo"
            android:textSize="@dimen/contact_list_item_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/countryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/contact_list_item_text_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/contact_list_item_text_size" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/country_padding"
            android:text="@string/country_demo"
            android:textSize="@dimen/contact_list_item_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/contact_list_item_text_size" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/city_padding"
            android:text="@string/city_demo"
            android:textSize="@dimen/contact_list_item_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/streetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/contact_list_item_text_size" />

        <TextView
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/street_padding"
            android:text="@string/street_demo"
            android:textSize="@dimen/contact_list_item_text_size" />
    </LinearLayout>

</LinearLayout>